basket done, dish update/delete in progress

--- a/src/main/webapp/css/general.css
+++ b/src/main/webapp/css/general.css
@@ -114,6 +114,10 @@ body * {
 	min-width: 560px;
 	max-width: 940px;
 }
+#errorMsg {
+	text-align: center;
+	color: red;
+}
 /* -------------------------------------------------------- *
  * ------------------------ SECTIONS ---------------------- *
  * -------------------------------------------------------- */
